--- a/config.env
+++ b/config.env
@@ -1,11 +1,11 @@
 PORT = 3000
-DATABASE = mongodb+srv://ttoannguyen2910:<password>@clusternatour.pcqw26j.mongodb.net/natours?retryWrites=true&w=majority
+DATABASE = mongodb+srv://ttoannguyen2910:<password>@cluster0.luqf5cu.mongodb.net/socialmedia?retryWrites=true&w=majority
 DATABASE_PASSWORD = toan29102002
 NODE_ENV = development
 
 JWT_SECRET = nguyen-thanh-toan-cang-long-tra-vinh-my-web-node-js
 JWT_EXPIRES_IN = 90d
-JWT_COOKIE_EXPIRES_IN = 90d
+JWT_COOKIE_EXPIRES_IN = 90
 
 EMAIL_USERNAME = c56efa3b971f88
 EMAIL_PASSWORD = ae9ebfec15ac23
